fixed navbar overflow on smaller screens

--- a/work/css/main.css
+++ b/work/css/main.css
@@ -1,6 +1,5 @@
 
 body {
-  padding-top: 70px;
   font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -196,6 +195,7 @@ footer {
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
+
   .navbar-collapse{
     background: #d4631c;
   }
